-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.0 Beta3, 6.4.0 Beta4
-
None
-
-
f4192dfcf5 (qt/qtbase/dev) f4192dfcf5 (qt/tqtc-qtbase/dev) 840484b4cb (qt/qtbase/6.4) 840484b4cb (qt/tqtc-qtbase/6.4)
With 6.4 (QtQuick, probably Widget) applications using QtMultimedia no longer start when deployed using windeployqt:
[7216] could not load multimedia backend ""
[7216] QtMultimedia is not currently supported on this platform or compiler.
This is caused by the missing plugin: .\plugins\multimedia\windowsmediaplugin.dll
This does not occur with 6.3, looks like that plugin was (re-)introduced in 6.4?
A simple media player example is attached.
- is cloned by
-
QTBUG-108742 macdeployqt: Multimedia plugins missing
-
- Closed
-
- is duplicated by
-
QTBUG-107639 windeployqt failed to copy the plugins/multimedia folder to the target folder
-
- Closed
-
-
QTBUG-107551 windeployqt missing file when using multimedia
-
- Closed
-
| For Gerrit Dashboard: QTBUG-105984 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 435947,2 | windeployqt: Add new multimedia plugins | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 436730,2 | windeployqt: Add new multimedia plugins | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |