windeployqt: Add new multimedia plugins

Reintroduced by qtmultimedia/ccdc369cb82180bc12c3a6b00d33afad2848ba02.

Pick-to: 6.4
Fixes: QTBUG-105984
Change-Id: Iaca5ac6ad360c78542f20922803bac3375cbe58a
Reviewed-by: André de la Rocha <andre.rocha@qt.io>